# Despeect-ProductBaseline

./: .bettercodehub.yml  .travis.yml  README.md  build.sh
DeSpeect/: CMakeLists.txt  main.cpp
DeSpeect/Model/Command/: CMakeLists.txt
DeSpeect/Model/Command/header/: abstractcommandlist.h  uttprocessorcommand.h
DeSpeect/Model/Command/src/: abstractcommandlist.cpp  createaudiocommand.cpp  loadplugincommand.cpp  setspeectconfigcommand.cpp  uttprocessorcommand.cpp
DeSpeect/Qt/: CMakeLists.txt
DeSpeect/Qt/header/: modelview.h
DeSpeect/Qt/src/: mainwindow.cpp  mainwindow.ui  modelview.cpp  view.ui
DeSpeect/Test/: Command_setspeectconfig.cpp
SpeectInstaller/builds/x86_64-Linux/Speect/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
SpeectInstaller/builds/x86_64-Linux/Speect/engine/: Makefile  SpeectConf.cmake  cmake_install.cmake  spctConfig.cmake
SpeectInstaller/builds/x86_64-Linux/Speect/plugins/: Makefile  cmake_install.cmake
SpeectInstaller/builds/x86_64-Linux/Speect/swig/: Makefile  cmake_install.cmake
SpeectInstaller/builds/x86_64-Linux/Speect/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
SpeectInstaller/builds/x86_64-Linux/hts_engine_API-1.03/: Makefile  config.status
SpeectInstaller/builds/x86_64-Linux/hts_engine_API-1.03/lib/: Makefile
SpeectInstaller/install/include/speect/engine/: spctConfig-debug.cmake  spctConfig.cmake
SpeectInstaller/install/lib/: libspct-py-native.so.1.1  libspct.so.1.1
SpeectInstaller/install/lib/speect/plugins/: addendum.spi  addendum.spi.1  addendum.spi.1.0.0  addendum_json.spi.1.0.0  array_float.spi.1  array_float.spi.1.0.0  array_float_ebml.spi.1.0.0  array_int.spi  array_int.spi.1.0.0  array_int_ebml.spi.1  array_int_ebml.spi.1.0.0  audio.spi  audio.spi.1  audio.spi.1.0.0  audio_riff.spi  audio_riff.spi.1  audio_riff.spi.1.0.0  breakindex_featproc.spi  breakindex_featproc.spi.1  ebml.spi  (+283 more)
(+1431 files in other folders)
